--- a/solace/templates/solaceStatefullSet.yaml
+++ b/solace/templates/solaceStatefullSet.yaml
@@ -9,6 +9,7 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    active: "false"
 spec:
   serviceName: {{ template "solace.fullname" . }}-discovery
   replicas: {{- if .Values.solace.redundancy }} 3 {{- else }} 1 {{- end }}
@@ -54,9 +55,9 @@ spec:
         readinessProbe:
           initialDelaySeconds: 30
           periodSeconds: 5
-          httpGet:
-            port: 5550
-            path: /health-check/guaranteed-active
+        exec:
+          command:
+          - {{ .Values.filepaths.configmap }}/readiness_check.sh
         securityContext:
           privileged: true
           capabilities:
@@ -64,24 +65,6 @@ spec:
               - IPC_LOCK
               - SYS_NICE
         env:
-        - name: username_admin_passwordfilepath
-          value: {{ .Values.filepaths.secrets }}/username_admin_password
-        - name: username_admin_globalaccesslevel
-          value: "admin"
-        - name: service_ssh_port
-          value: "22"
-        - name: logging_debug_output
-          value: "stdout"
-{{- if eq .Values.solace.size "small" }}
-        - name: system_scaling_maxconnectioncount
-          value: "1000"
-{{- else if eq .Values.solace.size "medium" }}
-        - name: system_scaling_maxconnectioncount
-          value: "10000"
-{{- else if eq .Values.solace.size "large" }}
-        - name: system_scaling_maxconnectioncount
-          value: "100000"
-{{- end }}
         - name: STATEFULSET_NAME
           value: {{ template "solace.fullname" . }}
         - name: STATEFULSET_NAMESPACE
@@ -93,7 +76,7 @@ spec:
  #         valueFrom:
  #           fieldRef:
  #             fieldPath: metadata.annotations['annotationKey']
- 
+
         command:
          - bash
          - "-ec"
@@ -151,7 +134,7 @@ spec:
           gcePersistentDisk:
             pdName: {{ .Values.storage.existingVolume }}
             fsType: ext4
-{{ else }}
+{{ else }}             
           emptyDir: {}
 {{- end }}
 {{ else }}
