--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -177,29 +177,64 @@ data:
 {{- end }}
       exit 0
 
-  readiness_check.sh: |-
-      #!/bin/bash
-      APP=`basename "$0"`
-      IFS='-' read -ra host_array <<< $(hostname)
-      node_ordinal=${host_array[-1]}
-      password=`cat /mnt/disks/secrets/username_admin_password`
-      return_code=0
-      echo "`date` INFO: ${APP}-Getting POD name"
-      echo "`date` INFO: ${APP}-Performing readiness check"
-      echo "`date` INFO: ${APP}-Determining redundancy role"
-      echo "`date` INFO: ${APP}-Redundancy role is ${local_role}"
-      echo "`date` INFO: ${APP}-Redundancy state based on role should be ${role_state}"
-      echo "`date` INFO: ${APP}-Determining redundancy state"
-      echo "`date` INFO: ${APP}-Redundancy state is ${local_state}" 
-      if [ ${role_state} -eq ${local_state} ]; then
-        if [ ${local_state} -eq "local_active" ]; then
-          echo "`date` INFO: ${APP}-Setting redundancy_active label" 
-        fi
-        echo "`date` INFO: ${APP}-Setting return code READY for ${pod_name}"
+  readiness_check_1.6.sh: |-
+    #!/bin/bash
+
+    # Function to set Kubernetes metadata labels
+    set_label () {
+      #Prevent overdriving Kubernetes infra, don't set activity state to same as previous state
+      previous_state=`cat $3`
+      if [ "${2}" = "${previous_state}" ]; then
+        echo "`date` INFO: ${APP}-Current and Previous state match, not updating label"
       else
-        echo "`date` WARN: ${APP}-Setting return code NOT_READY for ${pod_name}"
+        echo ${2} > ${3}
+        echo "[{\"op\": \"add\", \"path\": \"/metadata/labels/${1}\", \"value\": \"${2}\" }]" > /tmp/patch_label.json
+        POD_NAMESPACE=default
+        KUBE_TOKEN=$(</var/run/secrets/kubernetes.io/serviceaccount/token)
+        curl -sSk -H "Authorization: Bearer $KUBE_TOKEN" --request PATCH --data "$(cat /tmp/patch_label.json)" \
+            -H "Content-Type:application/json-patch+json" \
+            https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/namespaces/$POD_NAMESPACE/pods/$HOSTNAME
       fi
-      return ${return_code}
+    }
+
+    # note that there are no re-tries here, if check fails the return not ready.
+    APP=`basename "$0"`
+    password=`cat /mnt/disks/secrets/username_admin_password`
+    return_code=0
+    state_file=/tmp/activity_state
+    if [ ! -f ${state_file} ]; then
+      echo "State file not found, creating!"
+      echo "false" > ${state_file}
+    fi
+    echo "`date` INFO: ${APP}-node oridinal"
+    IFS='-' read -ra host_array <<< $(hostname)
+    node_ordinal=${host_array[-1]}
+
+    echo "`date` INFO: ${APP}-If Monitor node just pass ready check"
+    #[TODO]  Wiil need to actually check readiness for Monitor node going forward
+    # Current Issue RT-27455
+    if [ "${node_ordinal}" = "2" ]; then
+      exit 0
+    fi
+
+    health_result=`curl -s -o /dev/null -w "%{http_code}"  http://localhost:5550/health-check/guaranteed-active`
+    
+    case "${health_result}" in
+      "200")
+         echo "`date` INFO: ${APP}-Message Router is Active and Healthy"
+        set_label "active" "true" $state_file
+        exit 0
+        ;;
+      "503")
+         echo "`date` INFO: ${APP}-Message Router is Standby and Healthy"
+        set_label "active" "false" $state_file
+        exit 0
+        ;;
+      "")
+        echo "`date` WARN: ${APP}-Unable to deturmine config role, failing readiness check"
+        set_label "active" "false" $state_file
+        exit 1
+    esac
 
 
   semp_query.sh: |-
@@ -241,7 +276,7 @@ data:
           echo  '{"errorInfo":"missing parameter"}'
           exit 1
         fi
-      query_response=`curl -u ${name}:${password} ${url} -d "${query}"`
+      query_response=`curl -sS -u ${name}:${password} ${url} -d "${query}"`
       query_response_code=`echo $query_response | xmllint -xpath 'string(/rpc-reply/execute-result/@code)' -`
 
       if [[ -z ${query_response_code} && ${query_response_code} != "ok" ]]; then
